frontend_tests/negative/defer_builtin_result/go.mod
module example.com/renvotests/negative/defer_builtin_result

go 1.25
